[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
margin_left = 7.0
margin_top = 1.0
margin_right = 1020.0
margin_bottom = 602.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 45.0
margin_top = 121.0
margin_right = 358.0
margin_bottom = 214.0
color = Color( 0.0588235, 0.0392157, 0.0392157, 1 )

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 89.0
margin_top = 126.0
margin_right = 223.0
margin_bottom = 179.0
text = "Clique Aqui!"

[node name="Label" type="Label" parent="ColorRect/Button"]
margin_left = -56.0
margin_top = -113.0
margin_right = 239.0
margin_bottom = -41.0
align = 1
valign = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 404.0
margin_top = 127.0
margin_right = 689.0
margin_bottom = 217.0
color = Color( 0.0156863, 0.0117647, 0.0117647, 1 )

[node name="Button2" type="Button" parent="ColorRect2"]
margin_left = 82.0
margin_top = 127.0
margin_right = 208.0
margin_bottom = 180.0
text = "Clique Aqui!"

[node name="Label" type="Label" parent="ColorRect2/Button2"]
margin_left = -75.0
margin_top = -118.0
margin_right = 194.0
margin_bottom = -46.0

[node name="LineEdit" type="LineEdit" parent="ColorRect2/Button2"]
margin_left = -78.0
margin_top = -180.0
margin_right = 142.0
margin_bottom = -138.0

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 724.0
margin_top = 134.0
margin_right = 987.0
margin_bottom = 217.0
color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )

[node name="Button3" type="Button" parent="ColorRect3"]
anchor_left = 0.048
anchor_top = 0.128
anchor_right = 0.048
anchor_bottom = 0.128
margin_left = 43.904
margin_top = 115.016
margin_right = 166.904
margin_bottom = 160.016
text = "Clique Aqui!"

[node name="Label" type="Label" parent="ColorRect3/Button3"]
margin_left = -48.0
margin_top = -115.0
margin_right = 196.0
margin_bottom = -53.0

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 48.0
margin_top = 422.0
margin_right = 342.0
margin_bottom = 516.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )

[node name="Button4" type="Button" parent="ColorRect4"]
margin_left = 90.0
margin_top = 116.0
margin_right = 198.0
margin_bottom = 161.0
text = "Clique Aqui!"

[node name="Label" type="Label" parent="ColorRect4/Button4"]
margin_left = -81.0
margin_top = -108.0
margin_right = 194.0
margin_bottom = -29.0

[node name="LineEdit" type="LineEdit" parent="ColorRect4/Button4"]
margin_left = -79.0
margin_top = -175.0
margin_right = 119.0
margin_bottom = -126.0

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ColorRect4/Button4" to="." method="_on_Button4_pressed"]
